cpp/luhn/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.012s
user	0m0.000s
sys	0m0.012s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/build'
[ 25%] Building CXX object CMakeFiles/luhn.dir/luhn_test.cpp.o
[ 50%] Building CXX object CMakeFiles/luhn.dir/luhn.cpp.o
[ 75%] Building CXX object CMakeFiles/luhn.dir/test/tests-main.cpp.o
[100%] Linking CXX executable luhn
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/build'
[100%] Built target luhn
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/build'
===============================================================================
All tests passed (17 assertions in 17 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/build'
[100%] Built target test_luhn
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/luhn.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/luhn.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)28520"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
luhn.cpp                                      36      36   100%   
luhn_test.cpp                                 85      85   100%   
test/catch.hpp                                31      26    83%   1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                        152     147    96%
------------------------------------------------------------------------------
lines: 96.7% (147 out of 152)
branches: 42.9% (150 out of 350)

real	0m9.731s
user	0m8.841s
sys	0m0.886s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.154s
user	0m0.110s
sys	0m0.045s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.165s
user	0m0.107s
sys	0m0.059s

===============================================================================

Running: clang-format-16 -style=file -i ./luhn.cpp ./luhn_test.cpp ./luhn.h

real	0m0.021s
user	0m0.013s
sys	0m0.008s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./luhn.cpp ./luhn_test.cpp ./luhn.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/luhn.h:4:10: fatal error: 'array' file not found
#include <array>
         ^~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/luhn.h.

real	0m0.694s
user	0m0.638s
sys	0m0.056s


real	0m0.696s
user	0m0.640s
sys	0m0.056s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
17049 warnings generated.
52427 warnings generated.
52427 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/luhn.h.
Suppressed 52433 warnings (52427 in non-user code, 6 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m7.441s
user	0m7.371s
sys	0m0.069s
Running: clang-tidy-16 ./luhn.cpp ./luhn_test.cpp ./luhn.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/luhn/luhn.h:4:10: error: 'array' file not found [clang-diagnostic-error]
#include <array>
         ^~~~~~~


real	0m7.444s
user	0m7.373s
sys	0m0.071s

===============================================================================

